--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -18,13 +18,8 @@ jobs:
       - name: Build Vue + Vite
         run: |
           bun install
-          bun run build
+          bun run build-only
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: vue-vite-artifact
-          path: dist
       - uses: actions/upload-pages-artifact@v1
         with:
           path: dist
@@ -45,5 +40,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          artifact_name: vue-vite-artifact
