--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -25,6 +25,9 @@ jobs:
         with:
           name: github-pages
           path: dist
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: dist
 
   deploy:
     needs: build
