--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -21,11 +21,7 @@ jobs:
           bun run build-only
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: github-pages
-          path: dist
-      - uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v1
         with:
           path: dist
 
